# CPP-Guide

./: README.md
.devcontainer/x64_ubuntu24.04/: Dockerfile  README.md
code_examples/cmake/external_libraries/cmake_fetch-content_nlohmann_json_git/: CMakeLists.txt  CMakePresets.json
code_examples/cmake/external_libraries/cmake_fetch-content_nlohmann_json_git/scripts/: clean_configure_build_execute.sh
code_examples/cmake/external_libraries/cmake_fetch-content_nlohmann_json_git/src/: main.cpp
code_examples/gui/qt/imageblender/project/: CMakeLists.txt  CMakePresets.json
code_examples/gui/qt/imageblender/project/cmake/windows/: ReadMe.md  executable.cmake  toolchain.cmake
code_examples/gui/qt/imageblender/project/scripts/: build_windows.sh  create_windows_build_artifact.sh
code_examples/gui/qt/imageblender/project/src/: main.cpp
code_examples/memory/shallow_vs_deep_copy/: CMakeLists.txt
code_examples/oop/rule_of_five/: 01_copy_move.h  CMakeLists.txt  CMakePresets.json
code_examples/strings/io_streams/: CMakeLists.txt  (+1 more)
guide/design_patterns/: raii.md
guide/functions/: function_pointers.md  std_function.md
guide/memory/: pointers.md  references.md  shallow_copy_vs_deep_copy.md
guide/oop/: copy_and_move.md  friend.md  operator_overloading.md  rule_of_five.md  rule_of_zero.md
guide/strings/: c_style_strings.md  character_encoding.md  custom_file_desc.md  file_io.md  file_streams.md  io_streams.md  print.md  printf.md  std_format.md  std_string.md  string_literals.md  string_streams.md  string_view.md
guide/typing/: using_constexpr.md
(+29 files in other folders)
